--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,15 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+*.pdf
+*.png
 *.predictions
 *.gpickle
 *.dot
 *.reduced2
 *.reduced
-
+*.emb
+dense_embeddings/
 .idea
 
 # C extensions
